cmake_minimum_required(VERSION 3.17)
project(Week_10)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week_10 main.cpp Circle.cpp Circle.h PayRoll.cpp PayRoll.h BankAccount.cpp BankAccount.h)
add_executable(Week_10.1 Circle.cpp)
add_executable(Week_10.2 Car.cpp Car.h)
add_executable(Week_10.3 PayRoll.cpp PayRoll.h)
add_executable(Week_10.4 BankAccount.cpp BankAccount.h)